--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -46,3 +46,6 @@
     <!-- END Page wrapper  -->
     <!-- ============================================================== -->
 </div>
+
+<!-- Modal Upload-->
+<app-modal-upload></app-modal-upload>
